tests/ui/marker_trait_attr/marker-attribute-with-values.stderr
error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:3:1
   |
LL | #[marker(always)]
   | ^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[marker(with_items)]
   | ~~~~~~~~~~~~~~~~~~~~~
LL | #[marker]
   | ~~~~~~~~~

error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:6:1
   |
LL | #[marker("never")]
   | ^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[marker(with_items)]
   | ~~~~~~~~~~~~~~~~~~~~~
LL | #[marker]
   | ~~~~~~~~~

error: malformed `marker` attribute input
  --> $DIR/marker-attribute-with-values.rs:9:1
   |
LL | #[marker(key = "value")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: the following are the possible correct uses
   |
LL | #[marker(with_items)]
   | ~~~~~~~~~~~~~~~~~~~~~
LL | #[marker]
   | ~~~~~~~~~

error: aborting due to 3 previous errors

